# lut_builder

./: .gitignore  AGENTS.md  Contributing.md  README.md  build.bat  build.command  dev.bat  pyproject.toml  workspace.bat
.github/workflows/: ci.yml
docs/: SOLUTIONS_keep_legalrange_lut_outpu.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/research/: blackmagic-film-gen5-profile.md  false-color-lut-correctness.md  sensor-clipping-monitoring-lut.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/src/: App.tsx  editor.ts  index.css
frontend/tests/: editor.test.mjs  exposure-graph.test.mjs
src/lut_builder/: cli.py  colors.py  data.py  engine.py  presets.py  setup.py  web.py
src/lut_builder/static/: index.html
src/lut_builder/static/assets/: index-5UskgIDN.js  index-B-v_nOUM.css  index-B78VTtJZ.js  index-B8PJvgL0.css  index-BEFGoUpI.css  index-BSaXxZPP.js  index-Bay3Rxj_.css  index-BnjL_c7J.js  index-BpVC6rEw.css  index-BvBi9bKr.css  index-Bw25AxTc.js  index-C396YxJd.js  index-CXv223nh.js  index-CZKTmN7S.js  index-CfgKAmUN.css  index-Cg8h9Y91.js  index-CshftYcx.css  index-Cxn8KQlg.js  index-DDJOtsRR.js  index-DHxzUElb.css  index-DKlCXElJ.js  index-DQqfeQCC.css  index-DVnEJIcj.js  index-UEASJHA5.js  index-ZuQzXidY.css
tests/: test_cli.py  test_diagnostic_semantics.py  test_engine.py  test_profile_catalog.py  test_setup.py  test_smoke.py  test_web.py
